[FEATURE] Legg til romtildeling og fjerning med kapasitetskontroll
